web/src/shared/components/ArticleSection/style.scss
.event-detail-wrapper{
    .event-articles{
        margin-top: 75px;
        @media(max-width: 991px){
            margin-top: 35px;
        }
        @media(max-width: 767px){
            margin-top: 12px;
        }
    }
    .slick-list{
        overflow: hidden;
    }
    .item {
        transition: 0.3s box-shadow;
        -webkit-transition: 0.3s box-shadow;
        -moz-transition: 0.3s box-shadow;
        -o-transition: 0.3s box-shadow;
        &:after{
            content: "";
			position: absolute;
			top: -10px;
			left: -5px;
			width: calc(100% + 10px);
			height: calc(100% + 20px);
			transform: scaleY(0);
			transform-origin: bottom center;
			background: #ffffff;
			z-index: -1;
			transition: transform 0.3s;
			-webkit-transition: transform 0.3s;
			-moz-transition: transform 0.3s;
			-o-transition: transform 0.3s;
			right: 0px;
            bottom: 0px;
            box-shadow: 0 2px 27px 0 rgba(0, 0, 0, 0.12);
        }
        &:hover{
            cursor: pointer;            
            &:after{
                transform: scale(1);
            }
            .currently-showing-img{
                &:after{
                    content: none;
                }
            }
        }
    }
}
.event-articles{
    padding: 40px 30px;
    background-color: #F0F9FF;
    @media(max-width: 980px){
        padding: 30px 0px;
    }
    .carousel-dots{
        margin-top: 15px;
        @media(max-width: 768px){
            margin-top: 5px;
        }
    }
    .grid-container{
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        grid-gap: 16px;
        @media(max-width: 980px) {
			grid-template-columns: repeat(3, minmax(42%, 1fr));
		}
		@media(min-width: 992px) and (max-width: 1280px) {
			grid-template-columns: repeat(3, minmax(27%, 1fr));
		}
		@media (max-width: 768px) {
            grid-template-columns: repeat(3, minmax(31%, 1fr));
            grid-gap: 10px;
            overflow-x: auto;
            -ms-overflow-style: none; // IE 10+
            scrollbar-width: none; // Firefox
            &::-webkit-scrollbar {
                display: none;
                // Safari and Chrome
            }
        }
        @media (max-width: 767px) {
            grid-template-columns: repeat(3, minmax(85%, 1fr));
            grid-gap: 10px;
            overflow-x: auto;
            -ms-overflow-style: none; // IE 10+
            scrollbar-width: none; // Firefox
            &::-webkit-scrollbar {
                display: none;
                // Safari and Chrome
            }
		}
    }
    .item{
        position: relative;
        z-index: 1;
        &:after{
            content: "";
            position: absolute;
            top: -10px;
            left: -10px;
            width: calc(100% + 20px);
            height: calc(100% + 20px);
            transform: scaleY(0);
            transform-origin: bottom center;
            background: #ffffff;
            z-index: -1;
            transition: transform 0.3s;
            -webkit-transition: transform 0.3s;
            -moz-transition: transform 0.3s;
            -o-transition: transform 0.3s;
            right: 0px;
            bottom: 0px;
        }
        &:hover{
            &:after{
                transform: scaleY(1);
            }
            h3{
                color: #07B3F0;
                transition: 0.3s all;
                -webkit-transition: 0.3s all;
                -moz-transition: 0.3s all;
                -o-transition: 0.3s all;
                @media (max-width: 767px) {
                    color: #343434;
                }
            }
        }
        .item-img {
            margin-bottom: 10px;
            overflow: hidden;
            img{
                width: 100%;
                height: auto;
                transition: 0.9s transform;
                -webkit-transition: 0.9s transform;
                -moz-transition: 0.9s transform;
                -o-transition: 0.9s transform;
            }
        }
        h3 {
            font-size: 17px;
            line-height: 20px;
            font-weight: 500;
            font-family: 'Rubik', sans-serif;
            color: #343434;
            margin-bottom: 8px;
            transition: 0.3s all;
            -webkit-transition: 0.3s all;
            -moz-transition: 0.3s all;
			-o-transition: 0.3s all;
            @media (max-width: 767px) {
                font-size: 14px;
                line-height: 18px;
            }
        }
        p {
            font-size: 14px;
            line-height: 22px;
            font-weight: normal;
            font-family: 'Rubik', sans-serif;
            color: #626262;
            margin: 0px;
            @media(max-width: 767px) {
                font-size: 13px;
                line-height: 15px;
            }
            a{
                color: #007bff;
                transition: 0.3s all;
                -webkit-transition: 0.3s all;
                -moz-transition: 0.3s all;
                -o-transition: 0.3s all;
                @media(max-width: 767px) {
                    font-size: 13px;
                }
                &:hover{
                    color: #000;
                    transition: 0.3s all;
                    -webkit-transition: 0.3s all;
                    -moz-transition: 0.3s all;
                    -o-transition: 0.3s all;
                    @media(max-width: 991px) {
                        font-size: 13px;
                        color: #007bff;
                    }
                }
            }
        }
        .attraction-show-more{
            color: #007bff;
            transition: 0.3s all;
            -webkit-transition: 0.3s all;
            -moz-transition: 0.3s all;
            -o-transition: 0.3s all;
            cursor: pointer;
            &:hover{
                color: #000;
                transition: 0.3s all;
                -webkit-transition: 0.3s all;
                -moz-transition: 0.3s all;
                -o-transition: 0.3s all;
            }
        }
    }
    .section-top-wrArticleSectioner{
        display: grid;
        grid-template-columns: auto auto;
        @media(max-width: 767px) {
            margin-bottom: 10px;
        }
        .item{
            position: relative;
            z-index: 1;
            &:after{
                content: "";
                position: absolute;
                top: -10px;
                left: -10px;
                width: calc(100% + 20px);
                height: calc(100% + 20px);
                transform: scaleY(0);
                transform-origin: bottom center;
                background: #ffffff;
                z-index: -1;
                transition: transform 0.3s;
                -webkit-transition: transform 0.3s;
                -moz-transition: transform 0.3s;
                -o-transition: transform 0.3s;
                right: 0px;
                bottom: 0px;
            }
            &:hover{
                &:after{
                    transform: scaleY(1);
                }
            }
        }
        h2{
            @media(max-width: 768px){
                font-size: 20px;
                line-height: 28px;
                padding-bottom: 8px;
            }
        }
    }
}

